@@ -4,7 +4,10 @@ NEWS/ChangeLog for hydroGOF
         o 'valindex'     : false warning fixed. 
                            This warning raised the message "'sim' and 'obs' are empty or they do not have any common pair of elements with data !!",
                            even when 'sim' and 'obs' were fully compatible.
-        o 'gof2'         : -) internal: 'hydroTSM::daily2monthly' was replaced by 'daily2monthly' 
+        o 'gof2'         : -) TODO: -) 'ftype' argument now allows 'seasonal' value as input
+                           -) new argument 'stype'
+                           -) new argument 'season.names'
+                           -) internal: 'hydroTSM::daily2monthly' was replaced by 'daily2monthly' 
                            -) internal: 'hydroTSM::daily2annual' was replaced by 'daily2annual' 
                            -) internal: 'hydroTSM::vector2zoo' was replaced by 'vector2zoo' 
         o 'pbiasfdc'     : -) internal: 'hydroTSM::fdc' was replaced by 'fdc' 
